--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
 
-    <link rel="stylesheet" href="/src/assets/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="/src/assets/css/bootstrap.min.css" /> -->
   </head>
   <body>
     <noscript>
@@ -27,8 +27,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="<%= ../src/assets/js/bootstrap.min.js" %=></script>></script>
+    <!-- <script src="<%= ../src/assets/js/bootstrap.min.js" %=></script>></script>
     <script src="<%=../src/assets/js/jquery.js"%=></script>
-    <script src="<%=../src/assets/js/popper.js"%=></script>
+    <script src="<%=../src/assets/js/popper.js"%=></script> -->
   </body>
 </html>
